agregue mas codigo al payment

--- a/payment.html
+++ b/payment.html
@@ -7,5 +7,23 @@
 </head>
 <body>
     <h1>Datos de Envio</h1>
+
+    <form action="">
+        <label for="nombre">Nombre: </label>
+        <input type="text" name="nombre" id="nombre">
+        <br><br>
+        <label for="apellido">Apellido: </label>
+        <input type="text" name="apellido" id="apellido">
+        <br><br>
+        <label for="email">Correo Electronico: </label>
+        <input type="text" name="email" id="email">
+        <br><br>
+        <label for="telefono">Telefono :</label>
+        <input type="number" name="telefono" id="telefono" placeholder="Telefono">
+        <br><br>
+        <select name="" id="">
+            
+        </select>
+    </form>
 </body>
 </html>
