--- a/products/burgers.html
+++ b/products/burgers.html
@@ -27,22 +27,114 @@
 
     <form id="formulario" action="#" method="post">
         <h2> QUE BURGER VAS A PROBAR HOY? </h2>
-        <div class="producto">
-            <input type="radio" id="bacon" name="bacon" value="bacon" hidden>
-            <label for="bacon">
-                <img src="../img/bacon.jpg" alt="BACON" width="200">
-                <p> BACON $115 </p>
-            </label>
-        </div>
+        <table>
+            <tr>
+                <td>
+                    <div class="producto">
+                        <input type="radio" id="bacon" name="bacon" value="bacon" hidden>
+                        <label for="bacon">
+                            <img src="/img/bacon.jpg" alt="BACON" width="200">
+                            <p> BACON $115 </p>
+                        </label>
+                    </div>
+                    <div class="cantidad-container">
+                        <label for="cantidad">CANTIDAD:</label>
+                        <input type="number" id="cantidad" name="cantidad" min="1" value="1">
+                        <br><br>
+                        <button type="submit">AGREGAR A LA ORDEN</button>
 
-        <div class="cantidad-container">
-            <label for="cantidad">CANTIDAD:</label>
-            <input type="number" id="cantidad" name="cantidad" min="1" value="1">
-            <br><br>
-            <button type="submit">AGREGAR A LA ORDEN</button>
-        </div>
+                    </div>
+                </td>
+
+                <td>
+                    <div class="producto">
+                        <input type="radio" id="bacon" name="bacon" value="bacon" hidden>
+                        <label for="bacon">
+                            <img src="/img/bacon.jpg" alt="BACON" width="200">
+                            <p> CHEESE $115 </p>
+                        </label>
+                    </div>
+                    <div class="cantidad-container">
+                        <label for="cantidad">CANTIDAD:</label>
+                        <input type="number" id="cantidad" name="cantidad" min="1" value="1">
+                        <br><br>
+                        <button type="submit">AGREGAR A LA ORDEN</button>
+
+                    </div>
+                </td>
+
+                <td>
+                    <div class="producto">
+                        <input type="radio" id="bacon" name="bacon" value="bacon" hidden>
+                        <label for="bacon">
+                            <img src="/img/bacon.jpg" alt="BACON" width="200">
+                            <p> AMERICANA $115 </p>
+                        </label>
+                    </div>
 
 
+                    <div class="cantidad-container">
+                        <label for="cantidad">CANTIDAD:</label>
+                        <input type="number" id="cantidad" name="cantidad" min="1" value="1">
+                        <br><br>
+                        <button type="submit">AGREGAR A LA ORDEN</button>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="producto">
+                        <input type="radio" id="bacon" name="bacon" value="bacon" hidden>
+                        <label for="bacon">
+                            <img src="/img/bacon.jpg" alt="BACON" width="200">
+                            <p> AMERICANA $115 </p>
+                        </label>
+                    </div>
+
+
+                    <div class="cantidad-container">
+                        <label for="cantidad">CANTIDAD:</label>
+                        <input type="number" id="cantidad" name="cantidad" min="1" value="1">
+                        <br><br>
+                        <button type="submit">AGREGAR A LA ORDEN</button>
+                    </div>
+                </td>
+                <td>
+                    <div class="producto">
+                        <input type="radio" id="bacon" name="bacon" value="bacon" hidden>
+                        <label for="bacon">
+                            <img src="/img/bacon.jpg" alt="BACON" width="200">
+                            <p> AMERICANA $115 </p>
+                        </label>
+                    </div>
+
+
+                    <div class="cantidad-container">
+                        <label for="cantidad">CANTIDAD:</label>
+                        <input type="number" id="cantidad" name="cantidad" min="1" value="1">
+                        <br><br>
+                        <button type="submit">AGREGAR A LA ORDEN</button>
+                    </div>
+                </td>
+                <td>
+                    <div class="producto">
+                        <input type="radio" id="bacon" name="bacon" value="bacon" hidden>
+                        <label for="bacon">
+                            <img src="/img/bacon.jpg" alt="BACON" width="200">
+                            <p> AMERICANA $115 </p>
+                        </label>
+                    </div>
+
+
+                    <div class="cantidad-container">
+                        <label for="cantidad">CANTIDAD:</label>
+                        <input type="number" id="cantidad" name="cantidad" min="1" value="1">
+                        <br><br>
+                        <button type="submit">AGREGAR A LA ORDEN</button>
+                    </div>
+                </td>
+            </tr>
+        </table>
     </form>
 
 
