actualice el formulario y agregue terminos y condiciones

--- a/payment.html
+++ b/payment.html
@@ -83,7 +83,7 @@
     <input type="radio" name="Envio" id="Envio" value="Express"> Express
     <br><br>
     <label for="Terminos"></label>
-    <input type="checkbox" name="Terminos" id="Terminos"> <a href="">Acepto los términos y condiciones</a>
+    <input type="checkbox" name="Terminos" id="Terminos"> <a href="terminos_condiciones.html">Acepto los términos y condiciones</a>
   </form>
 </body>
 
