añadi el boton aceptar al formulario

--- a/payment.html
+++ b/payment.html
@@ -84,6 +84,8 @@
     <br><br>
     <label for="Terminos"></label>
     <input type="checkbox" name="Terminos" id="Terminos"> <a href="terminos_condiciones.html">Acepto los términos y condiciones</a>
+    <br><br>  
+    <button type="submit">Aceptar</button>
   </form>
 </body>
 
