--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul class="nav_link">
                 
                 <li>
-                    <div class="contact" href="/contacto.html" aria-label="link hacia formulario de contacto">Contactanos</div>
+                    <div class="contact" href="/contact.html" aria-label="link hacia formulario de contacto">Contactanos</div>
                 </li>
             </ul>
         </nav>
