modifique los archivos de order y payment para que funcione los terminos y condiciones

--- a/payment.html
+++ b/payment.html
@@ -29,6 +29,10 @@
         <input type="number" name="verification-code" id="verification-code" min="100" max="999">
 
         <br>
+        <label for="Terminos"></label>
+        <input type="checkbox" name="Terminos" id="Terminos"> <a href="terminos_condiciones.html">Acepto los términos y condiciones</a>
+
+        <br>
         <input type="submit" value="Agregar metodo de pago">
         <a href="/order.html">Cancelar metodo de pago</a>
     </form>
