--- a/order.html
+++ b/order.html
@@ -96,7 +96,7 @@
     <input type="radio" name="Envio" id="Envio" value="Express"> Express
     <br><br>
     <label for="Terminos"></label>
-    <input type="checkbox" name="Terminos" id="Terminos"> <a href="terminos_condiciones.html">Acepto los términos y condiciones</a>
+    <input type="checkbox" name="Terminos" id="Terminos"> <a href="terminos_condiciones_2.html">Acepto los términos y condiciones</a>
     <br><br>  
     </fieldset>
     <br><br>
