agregado de barra de navegacion a todas las ventanas

--- a/products/desserts.html
+++ b/products/desserts.html
@@ -6,6 +6,25 @@
     <title>Document</title>
 </head>
 <body>
+        <!-- Navegación -->
+  <header role="banner">
+    <div class="name" aria-label = "Nuestro nombre">K.O. Burguers</div> 
+
+    <a href="/index.html" class="logo" aria-label="Ir a la página de inicio">
+      <img src="/img/logo_ko.png" alt="" role="presentation" class="logo_img">
+    </a>
+    
+    <nav role="navigation" aria-label="">
+      <ul class="nav_link">
+        <li>
+          <a class="contact" href="/contact.html" aria-label="Contáctanos">
+            <span aria-hidden="true">Contáctanos</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  
     
 </body>
 </html>
