enlacé la navBar al formato en css

--- a/order.html
+++ b/order.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" href="/css/index.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Datos de Envio</title>
@@ -26,7 +27,7 @@
           </ul>
         </nav>
       </header>
-      
+
   <h1>Datos de Envio</h1>
 
   <form action="payment.html">
