--- a/products/burger.html
+++ b/products/burger.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="/css/index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seleccion de burger</title>
@@ -27,7 +28,7 @@
       </ul>
     </nav>
   </header>
-  
+
     <h1>ARMA TU PEDIDO </h1>
     <!-- <form action="#" method="POST">
         <label for="burger"> QUE BURGER VAS A PROBAR HOY?</label>
