modifique los aarchivos por conexiones de terminos y condiciones

--- a/payment.html
+++ b/payment.html
@@ -26,9 +26,9 @@
     </nav>
   </header>
 
-    <header>
+    <div>
         <h1 id="page-title">Datos de la tarjeta</h1>
-    </header>
+    </div>
 
     <form action="/order.html" method="post" role="form" aria-labelledby="form-title">
       <fieldset>
