Commit necesario actualizacion burgers

--- a/products/burger.html
+++ b/products/burger.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seleccion de burger</title>
+    <title>Arma tu pedido</title>
     
 </head>
 
 <body>
-    <h1>ARMA TU PEDIDO </h1>
+    <h1>HOLA SOY IKER</h1>
     <!-- <form action="#" method="POST">
         <label for="burger"> QUE BURGER VAS A PROBAR HOY?</label>
         <select id="burger" name="burger"> 
