--- a/products/burgers.html
+++ b/products/burgers.html
@@ -17,7 +17,7 @@
             <p > Bacon $115 Nivel 1 </p>
             <p > CARNE DE RES, EXTRA TOCINO CRUJIENTE, QUESO DERRETIDO, PAN BRIOCHE. RECOMENDACIÓN: nivel 2 </p>
             <label aria-hidden="true" for="cantidad_bacon">Cantidad</label>
-            <input aria-label="Introduce la cantidad de hamburguesa Bacon" type="number" id="cantidad_bacon" name="cantidad_bacon" min="0" value="0">
+            <input aria-label="Introduce la cantidad de hamburguesa Bacon" type="number" id="cantidad_bacon" name="cantidad_bacon" min="0" value="">
 
             <!-- Hamburguesa Cheese -->
             <img aria-hidden="true" src="/img/bacon.jpg" width="200">
