--- a/success.html
+++ b/success.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -6,10 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/index.css">
   <title>Compra exitosa | K.O. Burguers</title>
+
+  <style>
+    
+    .btn {
+      padding: 10px 16px;
+      background: #00AEEF;   
+      color: #ffffff;        
+      border: 2px solid #007EA6; 
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 600;
+      display: inline-block;
+    }
+   
+  </style>
 </head>
 <body>
-
-  <!-- Navegación (igual a la de ustedes) -->
   <header role="banner">
     <div class="name" aria-label="Nuestro nombre">K.O. Burguers</div>
 
@@ -29,13 +41,11 @@
   </header>
 
   <main id="main-content" role="main">
-
     <fieldset>
       <legend>Confirmación de compra</legend>
 
       <table width="100%" cellpadding="8">
         <tr>
-          <!-- Mensaje principal -->
           <td valign="top" width="70%">
             <h1>¡Compra exitosa!</h1>
             <p>Gracias por ordenar en <strong>K.O. Burguers</strong>.</p>
@@ -43,9 +53,9 @@
 
             <h3>Estado del pedido</h3>
             <ul>
-              <li>Recibimos tu orden</li>
-              <li>Preparando tu hamburguesa</li>
-              <li>Repartidor en camino</li>
+              <li>🧾 Recibimos tu orden</li>
+              <li>🍳 Preparando tu hamburguesa</li>
+              <li>🛵 Repartidor en camino</li>
             </ul>
 
             <h3>Detalles</h3>
@@ -55,20 +65,18 @@
             </ul>
 
             <p>
-              <a href="/index.html">Ordenar de nuevo</a>
+              <a href="/index.html" class="btn" role="button" aria-label="Ordenar otra hamburguesa">
+                🍔 Ordenar de nuevo
+              </a>
             </p>
           </td>
 
-          <!-- Espacio para imagen (arriba a la derecha) -->
           <td valign="top" width="30%" align="center">
-          
-            <div>(aqui va iamgen de la burguer)</div>
+            <div>(aquí va imagen de la burger)</div>
           </td>
         </tr>
       </table>
-
     </fieldset>
-
   </main>
 </body>
 </html>
