--- a/products/burgers.html
+++ b/products/burgers.html
@@ -34,48 +34,36 @@
 
             <!-- Hamburguesa Bacon -->
             <img aria-hidden="true" src="/img/bacon.jpg" width="200">
-            <p > Bacon $115 Nivel 1 </p>
+            <p > Bacon $115 </p>
             <p > CARNE DE RES, EXTRA TOCINO CRUJIENTE, QUESO DERRETIDO, PAN BRIOCHE. </p>
             <label aria-hidden="true" for="cantidad_bacon">Cantidad</label>
             <input aria-label="Introduce la cantidad de hamburguesa Bacon" type="number" id="cantidad_bacon" name="cantidad_bacon" min="0" value="">
 
             <!-- Hamburguesa Cheese -->
             <img aria-hidden="true" src="/img/bacon.jpg" width="200">
-            <p > Cheese $115 Nivel 1 </p>
+            <p > Cheese $115 </p>
             <p > CARNE DE RES, MEZCLA DE QUESOS CHEDAR DERRETIDOS, PAN BRIOCHE, LECHUGA. </p>
             <label aria-hidden="true" for="cantidad_cheese">Cantidad</label>
             <input aria-label="Introduce la cantidad de hamburguesa cheese" type="number" id="cantidad_cheese" name="cantidad_cheese" min="0" value="">
 
             <!-- Hamburguesa Americana -->
             <img aria-hidden="true" src="/img/bacon.jpg" width="200">
-            <p > Americana $115 Nivel 1 </p>
+            <p > Americana $115 </p>
             <p > CARNE DE RES, QUESO, PEPINILLOS, LECHUGA, TOMATE,  ADEREZO K.O, PAN BRIOCHE.  </p>
             <label aria-hidden="true" for="cantidad_americana">Cantidad</label>
             <input aria-label="Introduce la cantidad de hamburguesa Americana" type="number" id="cantidad_americana" name="cantidad_americana" min="0" value="">
 
-            <!-- Hamburguesa Oklahoma -->
-            <img aria-hidden="true" src="/img/bacon.jpg" width="200">
-            <p > Oklahoma $165 Nivel 1 </p>
-            <p > DOBLE CARNE DE RES, CEBOLLA FINAMENTE PICADA Y CARAMELIZADA SMASH, QUESO, PAN BRIOCHE. </p>
-            <label aria-hidden="true" for="cantidad_oklahoma">Cantidad</label>
-            <input aria-label="Introduce la cantidad de hamburguesa Oklahoma" type="number" id="cantidad_oklahoma" name="cantidad_oklahoma" min="0" value="">
-
-            <!-- Hamburguesa Mexicana -->
-            <img aria-hidden="true" src="/img/bacon.jpg" width="200">
-            <p > Mexicana $165 Nivel 1 </p>
-            <p > DOBLE CARNE DE RES, QUESO, GUACAMOLE MEXICANO K.O., LECHUGA, PAN BRIOCHE, ADEREZO BBQ O RANCH. </p>
-            <label aria-hidden="true" for="cantidad_mexicana">Cantidad</label>
-            <input aria-label="Introduce la cantidad de hamburguesa mexicana" type="number" id="cantidad_mexicana" name="cantidad_mexicana" min="0" value="">
-
             <!-- Hamburguesa UltraCheese -->
             <img aria-hidden="true" src="/img/bacon.jpg" width="200">
-            <p > Bacon $115 Nivel 1 </p>
+            <p > UltraCheese $165</p>
             <p > DOBLE CARNE DE RES, EXTRA QUESO K.O., TROCITOS DE TOCINO, LECHUGA, PAN BRIOCHE. </p>
             <label aria-hidden="true" for="cantidad_ultracheese">Cantidad</label>
             <input aria-label="Introduce la cantidad de hamburguesa UltraCheese" type="number" id="cantidad_ultracheese" name="cantidad_ultracheese" min="0" value="">
 
             <button type="submit">Agregar todas las hamburguesas seleccionadas</button>
-
+            <a href="desserts.html">
+  <button type="button">Comprar papas</button>
+</a>
         </fieldset>
     </form>
 </body>
