--- a/products/sodas.html
+++ b/products/sodas.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <link rel="stylesheet" href="/css/index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Arma tu pedido</title>
 </head>
 <body>
         <!-- Navegación -->
@@ -26,6 +26,45 @@
     </nav>
   </header>
 
-    
+    <h1>ARMA TU PEDIDO</h1>
+
+    <form id="formulario" action="#" method="post">
+        <fieldset>
+            <legend>Selecciona las hamburguesas y cantidades</legend>
+
+            <!-- Hamburguesa Bacon -->
+            <img aria-hidden="true" src="/img/bacon.jpg" width="200">
+            <p > Bacon $115 </p>
+            <p > CARNE DE RES, EXTRA TOCINO CRUJIENTE, QUESO DERRETIDO, PAN BRIOCHE. </p>
+            <label aria-hidden="true" for="cantidad_bacon">Cantidad</label>
+            <input aria-label="Introduce la cantidad de hamburguesa Bacon" type="number" id="cantidad_bacon" name="cantidad_bacon" min="0" value="">
+
+            <!-- Hamburguesa Cheese -->
+            <img aria-hidden="true" src="/img/bacon.jpg" width="200">
+            <p > Cheese $115 </p>
+            <p > CARNE DE RES, MEZCLA DE QUESOS CHEDAR DERRETIDOS, PAN BRIOCHE, LECHUGA. </p>
+            <label aria-hidden="true" for="cantidad_cheese">Cantidad</label>
+            <input aria-label="Introduce la cantidad de hamburguesa cheese" type="number" id="cantidad_cheese" name="cantidad_cheese" min="0" value="">
+
+            <!-- Hamburguesa Americana -->
+            <img aria-hidden="true" src="/img/bacon.jpg" width="200">
+            <p > Americana $115 </p>
+            <p > CARNE DE RES, QUESO, PEPINILLOS, LECHUGA, TOMATE,  ADEREZO K.O, PAN BRIOCHE.  </p>
+            <label aria-hidden="true" for="cantidad_americana">Cantidad</label>
+            <input aria-label="Introduce la cantidad de hamburguesa Americana" type="number" id="cantidad_americana" name="cantidad_americana" min="0" value="">
+
+            <!-- Hamburguesa UltraCheese -->
+            <img aria-hidden="true" src="/img/bacon.jpg" width="200">
+            <p > UltraCheese $165</p>
+            <p > DOBLE CARNE DE RES, EXTRA QUESO K.O., TROCITOS DE TOCINO, LECHUGA, PAN BRIOCHE. </p>
+            <label aria-hidden="true" for="cantidad_ultracheese">Cantidad</label>
+            <input aria-label="Introduce la cantidad de hamburguesa UltraCheese" type="number" id="cantidad_ultracheese" name="cantidad_ultracheese" min="0" value="">
+
+            <button type="submit">Agregar todas las hamburguesas seleccionadas</button>
+            <a href="desserts.html">
+  <button type="button">Comprar papas</button>
+</a>
+        </fieldset>
+    </form>
 </body>
 </html>
