--- a/success.html
+++ b/success.html
@@ -1,32 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/index.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Compra exitosa | K.O. Burguers</title>
 
-  <style>
-    
-    .btn {
-      padding: 10px 16px;
-      background: #00AEEF;   
-      color: #ffffff;        
-      border: 2px solid #007EA6; 
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: 600;
-      display: inline-block;
-    }
-   
-  </style>
+  <!-- 👇 Usa el mismo CSS del otro code para igualar el banner -->
+  <link rel="stylesheet" href="/css/index.css">
+  <!-- Tu CSS propio va después (si algo cambia, aquí puedes sobreescribir) -->
+  <link rel="stylesheet" href="success.css" />
 </head>
-<body>
+<body class="page-success">
   <header role="banner">
     <div class="name" aria-label="Nuestro nombre">K.O. Burguers</div>
 
     <a href="/index.html" class="logo" aria-label="Ir a la página de inicio">
-      <img src="/img/logo_ko.png" alt="" role="presentation" class="logo_img">
+      <img src="/img/logo_ko.png" alt="" role="presentation" class="logo_img" />
     </a>
 
     <nav role="navigation" aria-label="">
