--- a/sucess.html
+++ b/sucess.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <link rel="stylesheet" href="/css/index.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Queja enviada | K.O. Burguers</title>
+
+  <
+  <link rel="stylesheet" href="/css/index.css">
+ 
+  <
 </head>
-<body>
-        <!-- Navegación -->
+<body class="page-complaint-success">
   <header role="banner">
-    <div class="name" aria-label = "Nuestro nombre">K.O. Burguers</div> 
+    <div class="name" aria-label="Nuestro nombre">K.O. Burguers</div>
 
     <a href="/index.html" class="logo" aria-label="Ir a la página de inicio">
-      <img src="/img/logo_ko.png" alt="" role="presentation" class="logo_img">
+      <img src="/img/logo_ko.png" alt="" role="presentation" class="logo_img" />
     </a>
-    
+
     <nav role="navigation" aria-label="">
       <ul class="nav_link">
         <li>
@@ -26,7 +29,48 @@
     </nav>
   </header>
 
-    <!-- Alessandro file -->
-      <!-- cuando quieras hacerlo amigo 010 -->
+  <main id="main-content" role="main">
+    <fieldset>
+      <legend>Confirmación de queja</legend>
+
+      <table width="100%" cellpadding="8">
+        <tr>
+          <td valign="top" width="70%">
+            <h1>¡Queja enviada con éxito!</h1>
+            <p>
+              Lamentamos la mala experiencia que has tenido, tu queja fue enviada con éxito y
+              prometemos mejorar tu experiencia.
+            </p>
+
+            <h3>Estado de la queja</h3>
+            <ul>
+              <li>🧾 Recibimos tu queja</li>
+              <li>🔎 Nuestro equipo está revisando tu caso</li>
+              <li>📩 Te contactaremos con una solución</li>
+            </ul>
+
+            <h3>Detalles</h3>
+            <ul>
+              <li>N.º de caso: <strong>#KO-C-1032</strong></li>
+              <li>Canal: <strong>Formulario web</strong></li>
+            </ul>
+
+            <p>
+              <a href="/index.html" class="btn" role="button" aria-label="Volver al inicio">
+                ⬅️ Volver al inicio
+              </a>
+              &nbsp;
+              <a href="/contact.html" class="btn" role="button" aria-label="Contactar soporte">
+                ✉️ Contactar soporte
+              </a>
+            </p>
+          </td>
+
+          
+          </td>
+        </tr>
+      </table>
+    </fieldset>
+  </main>
 </body>
 </html>
