--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             <label for="name">Nombre completo:</label>
             <input type="text" id="name" name="name" class="contact-body" placeholder="Ejemplo: Juan Pérez" required aria-describedby="nameHelp">
             <small id="nameHelp">Introduce tu nombre y apellido.</small>
-            <br><br>
+            <br>
 
             <label for="email">Correo Electrónico:</label>
             <input type="email" id="email" name="email" class="contact-body" placeholder="ejemplo@correo.com" required aria-describedby="emailHelp">
@@ -47,8 +47,10 @@
         </fieldset>
 
         <br>
-
-        <button type="submit">Enviar</button>
+        
+        <a href="/sucess.html">
+            <button class="botonEnviar" type="button">Enviar</button>
+        </a>
     </form>
 </main>
 </body>
