modificacion de pantalla success de contacto y apariencia de botones

--- a/contact.html
+++ b/contact.html
@@ -48,9 +48,7 @@
 
         <br>
         
-        <a href="/sucess.html">
-            <button class="botonEnviar" type="button">Enviar</button>
-        </a>
+            <a href="/sucess.html" class="botonGeneral" type="button">Enviar</a>
     </form>
 </main>
 </body>
