--- a/sucess.html
+++ b/sucess.html
@@ -4,11 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Queja enviada | K.O. Burguers</title>
-
-  <
-  <link rel="stylesheet" href="/css/index.css">
- 
-  <
+  <link rel="stylesheet" href="/css/success.css">
+  
 </head>
 <body class="page-complaint-success">
  
@@ -40,11 +37,11 @@
             </ul>
 
             <p>
-              <a href="/index.html" class="btn" role="button" aria-label="Volver al inicio">
+              <a href="/index.html" class="btn botonX" role="button" aria-label="Volver al inicio">
                 ⬅️ Volver al inicio
               </a>
               &nbsp;
-              <a href="/contact.html" class="btn" role="button" aria-label="Contactar soporte">
+              <a href="/contact.html" class="btn botonX" role="button" aria-label="Contactar soporte">
                 ✉️ Contactar soporte
               </a>
             </p>
