cambio minimo de accesibilidad

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,8 @@
 
         <br>
         
-            <a href="/sucess.html" class="botonGeneral" type="button">Enviar</a>
+        <a href="/sucess.html" class="botonGeneral" role="button" aria-label="Enviar">Enviar</a>
+
     </form>
 </main>
 </body>
