--- a/products/sodas.html
+++ b/products/sodas.html
@@ -26,44 +26,40 @@
     </nav>
   </header>
 
-    <h1>ARMA TU PEDIDO</h1>
+    <h1>ESCOGE TUS BEBIDAS</h1>
 
     <form id="formulario" action="#" method="post">
         <fieldset>
-            <legend>Selecciona las hamburguesas y cantidades</legend>
+            <legend>Selecciona tus bebidas y cantidades</legend>
 
-            <!-- Hamburguesa Bacon -->
-            <img aria-hidden="true" src="/img/bacon.jpg" width="200">
-            <p > Bacon $115 </p>
-            <p > CARNE DE RES, EXTRA TOCINO CRUJIENTE, QUESO DERRETIDO, PAN BRIOCHE. </p>
-            <label aria-hidden="true" for="cantidad_bacon">Cantidad</label>
-            <input aria-label="Introduce la cantidad de hamburguesa Bacon" type="number" id="cantidad_bacon" name="cantidad_bacon" min="0" value="">
+            <!-- Limonada -->
+            <img aria-hidden="true" src="/img/limonada.jpg" width="200">
+            <p > Limonada $25</p>
+            <label aria-hidden="true" for="cantidad_limonada">Cantidad</label>
+            <input aria-label="Introduce la cantidad de Limonada" type="number" id="cantidad_limonada" name="cantidad_limonada" min="0" value="">
 
-            <!-- Hamburguesa Cheese -->
-            <img aria-hidden="true" src="/img/bacon.jpg" width="200">
-            <p > Cheese $115 </p>
-            <p > CARNE DE RES, MEZCLA DE QUESOS CHEDAR DERRETIDOS, PAN BRIOCHE, LECHUGA. </p>
-            <label aria-hidden="true" for="cantidad_cheese">Cantidad</label>
-            <input aria-label="Introduce la cantidad de hamburguesa cheese" type="number" id="cantidad_cheese" name="cantidad_cheese" min="0" value="">
+            <!-- Jamaica -->
+            <img aria-hidden="true" src="/img/jamaica.jpg" width="200">
+            <p > Jamaica $25 </p>
+            <label aria-hidden="true" for="cantidad_jamaica">Cantidad</label>
+            <input aria-label="Introduce la cantidad de Jamaica" type="number" id="cantidad_jamaica" name="cantidad_jamaica" min="0" value="">
 
-            <!-- Hamburguesa Americana -->
-            <img aria-hidden="true" src="/img/bacon.jpg" width="200">
-            <p > Americana $115 </p>
-            <p > CARNE DE RES, QUESO, PEPINILLOS, LECHUGA, TOMATE,  ADEREZO K.O, PAN BRIOCHE.  </p>
-            <label aria-hidden="true" for="cantidad_americana">Cantidad</label>
-            <input aria-label="Introduce la cantidad de hamburguesa Americana" type="number" id="cantidad_americana" name="cantidad_americana" min="0" value="">
+            <!-- Horchata -->
+            <img aria-hidden="true" src="/img/horchata.jpg" width="200">
+            <p > Horchata $25 </p>
+            <label aria-hidden="true" for="cantidad_horchata">Cantidad</label>
+            <input aria-label="Introduce la cantidad de Horchata" type="number" id="cantidad_horchata" name="cantidad_horchata" min="0" value="">
 
-            <!-- Hamburguesa UltraCheese -->
-            <img aria-hidden="true" src="/img/bacon.jpg" width="200">
-            <p > UltraCheese $165</p>
-            <p > DOBLE CARNE DE RES, EXTRA QUESO K.O., TROCITOS DE TOCINO, LECHUGA, PAN BRIOCHE. </p>
-            <label aria-hidden="true" for="cantidad_ultracheese">Cantidad</label>
-            <input aria-label="Introduce la cantidad de hamburguesa UltraCheese" type="number" id="cantidad_ultracheese" name="cantidad_ultracheese" min="0" value="">
-
-            <button type="submit">Agregar todas las hamburguesas seleccionadas</button>
+            <a href="burgers.html">
+            <button type="button">Comprar hamburguesas</button>
+            </a>
             <a href="desserts.html">
-  <button type="button">Comprar papas</button>
-</a>
+            <button type="button">Comprar papas</button>
+            </a>
+            <a href="/order.html">
+            <button type="button">Pagar los productos seleccionados</button>
+            </a>
+            
         </fieldset>
     </form>
 </body>
