--- a/products/burgers.html
+++ b/products/burgers.html
@@ -60,10 +60,16 @@
             <label aria-hidden="true" for="cantidad_ultracheese">Cantidad</label>
             <input aria-label="Introduce la cantidad de hamburguesa UltraCheese" type="number" id="cantidad_ultracheese" name="cantidad_ultracheese" min="0" value="">
 
-            <button type="submit">Agregar todas las hamburguesas seleccionadas</button>
-            <a href="desserts.html">
-  <button type="button">Comprar papas</button>
-</a>
+            
+            <a href="burgers.html">
+            <button type="button">Comprar papas</button>
+            </a>
+            <a href="sodas.html ">
+            <button type="button">Comprar bebidas</button>
+            </a>
+            <a href="/order.html">
+            <button type="button">Pagar los productos seleccionados</button>
+            </a>
         </fieldset>
     </form>
 </body>
