--- a/products/burgers.html
+++ b/products/burgers.html
@@ -33,28 +33,28 @@
             <legend>Selecciona las hamburguesas y cantidades</legend>
 
             <!-- Hamburguesa Bacon -->
-            <img aria-hidden="true" src="/img/bacon.jpg" width="200">
+            <img aria-hidden="true" src="/img/bacon1.jpg" width="200">
             <p > Bacon $115 </p>
             <p > CARNE DE RES, EXTRA TOCINO CRUJIENTE, QUESO DERRETIDO, PAN BRIOCHE. </p>
             <label aria-hidden="true" for="cantidad_bacon">Cantidad</label>
             <input aria-label="Introduce la cantidad de hamburguesa Bacon" type="number" id="cantidad_bacon" name="cantidad_bacon" min="0" value="">
 
             <!-- Hamburguesa Cheese -->
-            <img aria-hidden="true" src="/img/bacon.jpg" width="200">
+            <img aria-hidden="true" src="/img/cheese.jpg" width="200">
             <p > Cheese $115 </p>
             <p > CARNE DE RES, MEZCLA DE QUESOS CHEDAR DERRETIDOS, PAN BRIOCHE, LECHUGA. </p>
             <label aria-hidden="true" for="cantidad_cheese">Cantidad</label>
             <input aria-label="Introduce la cantidad de hamburguesa cheese" type="number" id="cantidad_cheese" name="cantidad_cheese" min="0" value="">
 
             <!-- Hamburguesa Americana -->
-            <img aria-hidden="true" src="/img/bacon.jpg" width="200">
+            <img aria-hidden="true" src="/img/americana.jpg" width="200">
             <p > Americana $115 </p>
             <p > CARNE DE RES, QUESO, PEPINILLOS, LECHUGA, TOMATE,  ADEREZO K.O, PAN BRIOCHE.  </p>
             <label aria-hidden="true" for="cantidad_americana">Cantidad</label>
             <input aria-label="Introduce la cantidad de hamburguesa Americana" type="number" id="cantidad_americana" name="cantidad_americana" min="0" value="">
 
             <!-- Hamburguesa UltraCheese -->
-            <img aria-hidden="true" src="/img/bacon.jpg" width="200">
+            <img aria-hidden="true" src="/img/ultracheese.jpg" width="200">
             <p > UltraCheese $165</p>
             <p > DOBLE CARNE DE RES, EXTRA QUESO K.O., TROCITOS DE TOCINO, LECHUGA, PAN BRIOCHE. </p>
             <label aria-hidden="true" for="cantidad_ultracheese">Cantidad</label>
