Conecte payment con success

--- a/payment.html
+++ b/payment.html
@@ -30,7 +30,7 @@
         <h1 id="page-title">Datos de la tarjeta</h1>
     </div>
 
-    <form action="/order.html" method="post" role="form" aria-labelledby="form-title">
+    <form action="success.html" role="form" aria-labelledby="form-title">
       <fieldset>
         <legend id="form-title">Información de pago</legend>
 
@@ -60,7 +60,7 @@
         </label>
 
         <br>
-        <input type="submit" value="Agregar método de pago">
+       <input type="submit" value="Agregar método de pago">
         <a href="/order.html">Cancelar método de pago</a>
       </fieldset>
     </form>
