--- a/products/burgers.html
+++ b/products/burgers.html
@@ -61,7 +61,7 @@
             <input aria-label="Introduce la cantidad de hamburguesa UltraCheese" type="number" id="cantidad_ultracheese" name="cantidad_ultracheese" min="0" value="">
 
             
-            <a href="burgers.html">
+            <a href="desserts.html">
             <button type="button">Comprar papas</button>
             </a>
             <a href="sodas.html ">
