cambios en funcionalidad

--- a/order.html
+++ b/order.html
@@ -32,6 +32,9 @@
       </nav>
     </header>
 
+    <label class="menu-icon" aria-label="Abrir menú de navegación">*Le recomendamos leer nuestros terminos y condiciones antes de ingresar sus datos*</label>
+
+
     <h1>Datos de Envio</h1>
 
     <form action="payment.html">
