--- a/payment.html
+++ b/payment.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="/css/index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Proceso de pago</title>
 </head>
 <body>
 <!-- Navegación -->
@@ -25,6 +25,8 @@
       </ul>
     </nav>
   </header>
+
+  <label class="menu-icon" aria-label="Abrir menú de navegación">*Le recomendamos leer nuestros terminos y condiciones antes de ingresar sus datos*</label>
 
     <div>
         <h1 id="page-title">Datos de la tarjeta</h1>
@@ -60,8 +62,8 @@
         </label>
 
         <br>
-       <input type="submit" value="Agregar método de pago">
-        <a href="/order.html">Cancelar método de pago</a>
+       <input type="submit" value="Pagar">
+        <a href="/order.html">Cambiar datos de envio</a>
       </fieldset>
     </form>
 
