--- a/success.html
+++ b/success.html
@@ -26,9 +26,9 @@
 
             <h3>Estado del pedido</h3>
             <ul>
-              <li>🧾 Recibimos tu orden</li>
-              <li>🍳 Preparando tu hamburguesa</li>
-              <li>🛵 Repartidor en camino</li>
+              <li> Recibimos tu orden</li>
+              <li> Preparando tu hamburguesa</li>
+              <li> Repartidor en camino</li>
             </ul>
 
             <h3>Detalles</h3>
@@ -39,7 +39,7 @@
 
             <p>
               <a href="/index.html" class="btn" role="button" aria-label="Ordenar otra hamburguesa">
-                🍔 Ordenar de nuevo
+                 Ordenar de nuevo
               </a>
             </p>
           </td>
