--- a/sucess.html
+++ b/sucess.html
@@ -25,9 +25,9 @@
 
             <h3>Estado de la queja</h3>
             <ul>
-              <li>🧾 Recibimos tu queja</li>
-              <li>🔎 Nuestro equipo está revisando tu caso</li>
-              <li>📩 Te contactaremos con una solución</li>
+              <li> Recibimos tu queja</li>
+              <li> Nuestro equipo está revisando tu caso</li>
+              <li> Te contactaremos con una solución</li>
             </ul>
 
             <h3>Detalles</h3>
@@ -38,7 +38,7 @@
 
             <p>
               <a href="/index.html" class="btn botonX" role="button" aria-label="Volver al inicio">
-                ⬅️ Volver al inicio
+                 Volver al inicio
               </a>
               &nbsp;
               <a href="/contact.html" class="btn botonX" role="button" aria-label="Contactar soporte">
